--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,6 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="icon/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/cropper/dist/cropper.css">
-
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/cropper/dist/cropper.js"></script>
@@ -22,7 +20,10 @@
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
     <script src="/js/directives.js"></script>
-
+    <script src="/directives/adminLogin/adminLogin.js"></script>
+    <script src="/directives/login/login.js"></script>
+    <script src="/directives/product/product.js"></script>
+    <script src="/directives/register/register.js"></script>
 
 </head>
 
