--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html ng-app="mainApp">
 <head>
+
     <meta charset="UTF-8">
     <title>FUTRENA</title>
     <link rel="stylesheet" href="css/app.css">
@@ -24,9 +25,9 @@
     <script src="/directives/login/login.js"></script>
     <script src="/directives/product/product.js"></script>
     <script src="/directives/register/register.js"></script>
+    <script src="/controller/productDisplay.js"></script>
 
 </head>
-
 <body style="width: 100%; margin: 0 auto; font-weight: lighter" id="mainContainer">
 
 <div ui-view></div>
