--- a/static/directives/login/login.html
+++ b/static/directives/login/login.html
@@ -2,7 +2,8 @@
 <div class="userSignInUp">
 	<div class="login" ng-show="State=='login'">
 		<div class="loginHeader">
-			<p style="color: white; font-size: 30px">SIGN IN</p>
+			<div style="color: white;font-weight: normal ;font-size: 30px">SIGN IN <a ng-click="close()" style="margin-left: 300px; height: 30px; color: white"><i class="fa fa-times"></i></a></div>
+			
 		</div>
 		<div
 			style="width: 80%; margin-left: auto; margin-right: auto; position: absolute; top: 20%; left: 10%">
