--- a/static/directives/register/register.html
+++ b/static/directives/register/register.html
@@ -1,7 +1,7 @@
 
 <div class="login">
     <div class="loginHeader">
-        <p style="color: white; font-size: 30px">SIGN UP</p>
+        <div style="color: white; font-size: 30px">SIGN UP <a ng-click="close()" style="margin-left: 300px; height: 30px; color: white"><i class="fa fa-times"></i></a></div>
     </div>
     <div style="width: 80%; margin-left: auto; margin-right: auto; position: absolute; top: 15%; left: 10%">
         <div class="alert alert-danger" role="alert" ng-show="errorMessage">{{errorMessage}}</div>
