--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script src="https://js.stripe.com/v2/"></script>
     
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
@@ -39,12 +39,10 @@
     <script src="/controller/successSubmission.js"></script>
     <script src="/controller/userPage.js"></script>
     <script src="/controller/submission.js"></script>
+    <script src="/controller/admin.js"></script>
     
-
 </head>
 <body style="width: 100%; margin: 0 auto; font-weight: lighter;" id="mainContainer">
-
-<div ui-view></div>
-
+    <div ui-view></div>
 </body>
 </html>
