--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,9 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="https://js.stripe.com/v2/"></script>
+
+    <script src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
+    <script src="bower_components/ng-clip/src/ngClip.js"></script>
     
     <script src="/js/app.js"></script>
     <script src="/js/controller.js"></script>
@@ -34,6 +37,7 @@
     <script src="/directives/register/register.js"></script>
     <script src="/directives/StripePayment/stripePayment.js"></script> 
     <script src="/directives/UserProduct/userProduct.js"></script>
+    <script src="/directives/productDisplay/shareUrl.js"></script>
      
     <script src="/controller/productDisplay.js"></script>
     <script src="/controller/successSubmission.js"></script>
