connect to share info

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@
     <script src="/directives/productDisplay/shareUrl.js"></script>
      
     <script src="/controller/productDisplay.js"></script>
+    <script src="/controller/distributeDisplay.js"></script>
     <script src="/controller/successSubmission.js"></script>
     <script src="/controller/userPage.js"></script>
     <script src="/controller/submission.js"></script>
