--- a/static/directives/productDisplay/shareUrl.html
+++ b/static/directives/productDisplay/shareUrl.html
@@ -10,3 +10,15 @@
 
     <a style="margin-left: 20px" data-toggle="popover" id="pop-over-link"
             ><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>
+
+    <script>
+        $('body').on('click', function (e) {
+            $("#pop-over-link").each(function () {
+                //the 'is' for buttons that trigger popups
+                //the 'has' for icons within a button that triggers a popup
+                if (!$(this).is(e.target) && $(this).has(e.target).length === 0 && $('.popover').has(e.target).length === 0) {
+                    $(this).popover('hide');
+                }
+            });
+        });
+    </script>
