check user (whether login) when distributing

--- a/static/directives/productDisplay/shareUrl.html
+++ b/static/directives/productDisplay/shareUrl.html
@@ -8,7 +8,7 @@
                 clip-copy="copyContent">Copy</button>
     </div>
 
-    <a style="margin-left: 20px" data-toggle="popover" id="pop-over-link"
+    <a style="margin-left: 20px" data-toggle="popover" id="pop-over-link" ng-click="checkUser()"
             ><i class="fa fa-share-alt fa-2x"><i style="font-size: 15px">Distribute</i></i></a>
 
     <script>
